{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 204,
  "lineage": "d7662a6f-201d-e705-d15c-333c9d8cba33",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:vpc/vpc-05e950625156efff2",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02529ff1c0658c81c",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-e210d889",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05e950625156efff2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07a1f10a6137d99e4",
            "owner_id": "500822580415",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7",
            "arn_suffix": "net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7",
            "dns_name": "relayers-choice-0-lb-Demo-ddf3ee172832e9e7.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "relayers-choice-0-lb-Demo",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002fabd78e8bf85d1"
              },
              {
                "subnet_id": "subnet-09996ae60b708a280"
              },
              {
                "subnet_id": "subnet-0cbf0b6ea7de8a568"
              }
            ],
            "subnets": [
              "subnet-002fabd78e8bf85d1",
              "subnet-09996ae60b708a280",
              "subnet-0cbf0b6ea7de8a568"
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1",
            "arn_suffix": "net/relayers-choice-1-lb-Demo/c4d4dc4833147df1",
            "dns_name": "relayers-choice-1-lb-Demo-c4d4dc4833147df1.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "relayers-choice-1-lb-Demo",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002fabd78e8bf85d1"
              },
              {
                "subnet_id": "subnet-09996ae60b708a280"
              },
              {
                "subnet_id": "subnet-0cbf0b6ea7de8a568"
              }
            ],
            "subnets": [
              "subnet-002fabd78e8bf85d1",
              "subnet-09996ae60b708a280",
              "subnet-0cbf0b6ea7de8a568"
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e",
            "arn_suffix": "net/relayers-choice-2-lb-Demo/7d46a78b54cf771e",
            "dns_name": "relayers-choice-2-lb-Demo-7d46a78b54cf771e.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "relayers-choice-2-lb-Demo",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002fabd78e8bf85d1"
              },
              {
                "subnet_id": "subnet-09996ae60b708a280"
              },
              {
                "subnet_id": "subnet-0cbf0b6ea7de8a568"
              }
            ],
            "subnets": [
              "subnet-002fabd78e8bf85d1",
              "subnet-09996ae60b708a280",
              "subnet-0cbf0b6ea7de8a568"
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7/217aa7993342a266",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230215222728549000000001/5c6c31eff912053c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7/217aa7993342a266",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7",
            "port": 9001,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.http",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1/fbb0630377cb383c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107589100000003/929a1dc7eb2c1fe4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1/fbb0630377cb383c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1",
            "port": 9001,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.http",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e/963bd41f67f0ebda",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107590100000005/cdf84159f230d1ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e/963bd41f67f0ebda",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e",
            "port": 9001,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.http",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7/4cc99debb06cd84e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230215222728549400000002/60f45fd360f0f0ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7/4cc99debb06cd84e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-0-lb-Demo/ddf3ee172832e9e7",
            "port": 9000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.tcp",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1/42d5759f25649baf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107589900000004/6ee4c8a885d80ddb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1/42d5759f25649baf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-1-lb-Demo/c4d4dc4833147df1",
            "port": 9000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.tcp",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e/90051a0e207e2083",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107590200000006/388e4d962bafd05d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:listener/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e/90051a0e207e2083",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:loadbalancer/net/relayers-choice-2-lb-Demo/7d46a78b54cf771e",
            "port": 9000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.tcp",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230215222728549000000001/5c6c31eff912053c",
            "arn_suffix": "targetgroup/Demo20230215222728549000000001/5c6c31eff912053c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230215222728549000000001/5c6c31eff912053c",
            "lambda_multi_value_headers_enabled": false,
            "name": "Demo20230215222728549000000001",
            "name_prefix": "Demo",
            "port": 9001,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "aws_lb.main",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107589100000003/929a1dc7eb2c1fe4",
            "arn_suffix": "targetgroup/Demo20230218161107589100000003/929a1dc7eb2c1fe4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107589100000003/929a1dc7eb2c1fe4",
            "lambda_multi_value_headers_enabled": false,
            "name": "Demo20230218161107589100000003",
            "name_prefix": "Demo",
            "port": 9001,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "aws_lb.main",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107590100000005/cdf84159f230d1ea",
            "arn_suffix": "targetgroup/Demo20230218161107590100000005/cdf84159f230d1ea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107590100000005/cdf84159f230d1ea",
            "lambda_multi_value_headers_enabled": false,
            "name": "Demo20230218161107590100000005",
            "name_prefix": "Demo",
            "port": 9001,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "aws_lb.main",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230215222728549400000002/60f45fd360f0f0ba",
            "arn_suffix": "targetgroup/Demo20230215222728549400000002/60f45fd360f0f0ba",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "9001",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230215222728549400000002/60f45fd360f0f0ba",
            "lambda_multi_value_headers_enabled": false,
            "name": "Demo20230215222728549400000002",
            "name_prefix": "Demo",
            "port": 9000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "aws_lb.main",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107589900000004/6ee4c8a885d80ddb",
            "arn_suffix": "targetgroup/Demo20230218161107589900000004/6ee4c8a885d80ddb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "9001",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107589900000004/6ee4c8a885d80ddb",
            "lambda_multi_value_headers_enabled": false,
            "name": "Demo20230218161107589900000004",
            "name_prefix": "Demo",
            "port": 9000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "aws_lb.main",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107590200000006/388e4d962bafd05d",
            "arn_suffix": "targetgroup/Demo20230218161107590200000006/388e4d962bafd05d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "9001",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:500822580415:targetgroup/Demo20230218161107590200000006/388e4d962bafd05d",
            "lambda_multi_value_headers_enabled": false,
            "name": "Demo20230218161107590200000006",
            "name_prefix": "Demo",
            "port": 9000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "aws_lb.main",
            "data.aws_subnets.ec2_public_subnets",
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:security-group/sg-0a0bf68d1845e0213",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0bf68d1845e0213",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9001
              }
            ],
            "name": "relayers-choice-sg-task-Demo",
            "name_prefix": "",
            "owner_id": "500822580415",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:security-group/sg-009cb48e089cf6cc2",
            "description": "Allows NFS traffic from instances within the VPC.",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "id": "sg-009cb48e089cf6cc2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "relayers-choice-efs-Demo",
            "name_prefix": "",
            "owner_id": "500822580415",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "relayers-choice-efs-Demo"
            },
            "tags_all": {
              "Env": "STAGE",
              "Name": "relayers-choice-efs-Demo",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:security-group/sg-039289888f192b069",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039289888f192b069",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9001
              }
            ],
            "name": "relayers-choice-sg-alb-Demo",
            "name_prefix": "",
            "owner_id": "500822580415",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "STAGE",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}